fix: html elements overlaping

--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -28,7 +28,8 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
   box-sizing: border-box;
-  height: 98%;
+  height: auto;
+  z-index: 2;
 }
 
 .profil-page-container form{
@@ -76,7 +77,7 @@ body {
   flex-direction: row;
   text-align: center;
   justify-content: space-around;
-  padding-bottom: 50px;
+  padding-bottom: 30px;
 }
 
 .row span{
